Added test classes and fixed some bugs